fixed overflow

--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ main {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
   height: 80vh;
   margin: auto;
 }
